--- a/index.html
+++ b/index.html
@@ -36,15 +36,18 @@
           <h3>kanskje skal du til mormor?</h3>
           <h3>leier med hester og moro?</h3>
         </div>
+        <div class="herotextdanmark">
+          <img class="imgPark"   src="bilder/paark.jpg" alt=" karuseli">
+        </div>
       </div>
       
-      <div class="karulesiDiv">
+      <div class="ParkDiv">
         <div class="heroimgdanmark">
 
         <img class="imgbilder" src="bilder/barn.jpg" alt="basrnebarn">
       </div>
         <div class="herotextdanmark">
-        <img class="imgkaruseli"   src="bilder/karuseli.jpg" alt=" karuseli">
+        <img class="imgPark"   src="bilder/paark.jpg" alt=" karuseli">
       </div>
       
     </div>
