--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
         <img class="imgtransport" src="bilder/buss.jpg" alt="flixbuss">
       </div>
       <div class="herotextTransport">
-<h2>Visit heroDanmark</h2>
-<img class="hjerte" src="bilder/hjerte.webp" alt="hjerte">
+        <img src="bilder/VDK-logo.svg" alt="logo Danmark">
+<h2>Visit Danmark</h2>
+
 <p>Du kan reise med tog,fly,båt eller bil til Danmark</p>
 <h2> For eksempel med flyselskap Norvegian</h2>
 <a href="https://www.rejseplanen.dk/webapp/index.html?language=da_DA#!P|TP!histId|0!histKey|H171852"></a>
@@ -71,7 +72,6 @@
         Danmark tilbyr 12 resultater: i tillegg til over- natting i telt kanman
         leie en kran høyt oppi i luften...
       </div>
-      <div class="heroIMgbassen"></div>
       <div class="herotextbassen"></div>
       
    
