--- a/index.html
+++ b/index.html
@@ -64,19 +64,18 @@
 
       </div>
     
+   
+    </section>
+    <section id="overnatting">
       <div class="heroimg">
         <img src="" alt="" />
       </div>
       <div class="herotext">
         Overnatting kan søkes på trivago, airbnb, booking eller hotels. Visit
         Danmark tilbyr 12 resultater: i tillegg til over- natting i telt kanman
-        leie en kran høyt oppi i luften...
+        leie en kran høyt oppi i dluften...
       </div>
       <div class="herotextbassen"></div>
-      
-   
-    </section>
-    <section id="overnatting">
       <div>
   
       </div>
