--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </section>
     <section id="overnatting">
       <div class="heroimg">
-        <img src="" alt="" />
+        <img src="bilder/strand.jpg" alt="strand" />
       </div>
       <div class="herotext">
         Overnatting kan søkes på trivago, airbnb, booking eller hotels. Visit
