--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
    
     </section>
     <section id="overnatting">
-      <div class="heroimg">
-        <img src="bilder/strand.jpg" alt="strand" />
+      <div class="heroImgSwim">
+        <img  class="Swim" src="bilder/strand.jpg" alt="strand" />
       </div>
-      <div class="herotext">
+      <div class="herotextSwim">
         Overnatting kan søkes på trivago, airbnb, booking eller hotels. Visit
         Danmark tilbyr 12 resultater: i tillegg til over- natting i telt kanman
         leie en kran høyt oppi i dluften...
