--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
     </section>
     <section id="overnatting">
       <div class="heroImgSwim">
-        <img  class="Swim" src="bilder/strand.jpg" alt="strand" />
+        <img class="Swim" src="bilder/swim.jpg" alt="strand" />
       </div>
       <div class="herotextSwim">
-        Overnatting kan søkes på trivago, airbnb, booking eller hotels. Visit
+       <p> Overnatting kan søkes på trivago, airbnb, booking eller hotels. Visit
         Danmark tilbyr 12 resultater: i tillegg til over- natting i telt kanman
-        leie en kran høyt oppi i dluften...
+        leie en kran høyt oppi i luften...</p>
       </div>
       <div class="herotextbassen"></div>
       <div>
