--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </section>
     <section id="overnatting">
       <div class="heroImgSwim">
-        <img class="Swim" src="bilder/swim.jpg" alt="strand" />
+        <img class="Swim" src="bilder/Swim.jpg" alt="strand" />
       </div>
       <div class="herotextSwim">
        <p> Overnatting kan søkes på trivago, airbnb, booking eller hotels. Visit
