--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </section>
     <section id="overnatting">
       <div class="heroImgSwim">
-        <img class="Swim" src="bilder/Swim.jpg" alt="strand" />
+        <img class="imgSwim" src="bilder/Swim.jpg" alt="strand" />
       </div>
       <div class="herotextSwim">
        <p> Overnatting kan søkes på trivago, airbnb, booking eller hotels. Visit
@@ -76,6 +76,7 @@
         leie en kran høyt oppi i luften...</p>
       </div>
       <div class="herotextbassen"></div>
+      <img  class="imgPool"  src="bilder/pool.jpg" alt="bassein">
       <div>
   
       </div>
