--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
         Danmark tilbyr 12 resultater: i tillegg til over- natting i telt kanman
         leie en kran høyt oppi i luften...</p>
       </div>
-      <div class="herotextbassen"></div>
+      <div class="herotextPool"></div>
+      
+      <div class="heroimgPool"></div>
       <img  class="imgPool"  src="bilder/pool.jpg" alt="bassein">
       <div>
   
