--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
    
     </section>
     <section id="overnatting">
+      <Div>
       <div class="heroImgSwim">
         <img class="imgSwim" src="bilder/Swim.jpg" alt="strand" />
       </div>
@@ -75,8 +76,9 @@
         Danmark tilbyr 12 resultater: i tillegg til over- natting i telt kanman
         leie en kran høyt oppi i luften...</p>
       </div>
+    </Div>
       <div class="herotextPool"></div>
-      
+
       <div class="heroimgPool"></div>
       <img  class="imgPool"  src="bilder/pool.jpg" alt="bassein">
       <div>
