--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="heroDanmark">
         <div class="heroimgdanmark">
           <img src="bilder/VDK-logo.svg" alt="logo Danmark">
-          <h2>ønsker</h2>
+          <3>ønsker</3>
           <div class="heroimgdanmark">
 
             <img class="imgbarn" src="bilder/barn.jpg" alt="basrnebarn">
@@ -53,9 +53,9 @@
      
       <div class="herotextTransport">
         <img src="bilder/VDK-logo.svg" alt="logo Danmark">
-      <h2>Du kan reise med tog,fly,båt eller bil til Danmark</h2>
+      <3>Du kan reise med tog,fly,båt eller bil til Danmark</3>
 
-      <h2> For eksempel med flyselskap Norvegian</h2>
+      <3> For eksempel med flyselskap Norvegian</3>
       <a href="https://www.rejseplanen.dk/webapp/index.html?language=da_DA#!P|TP!histId|0!histKey|H171852"></a>
       </div>
       <div class="heroimgTransport">
@@ -66,16 +66,18 @@
     
    
     </section>
-    <section id="Live">
-      <h2></h2>
+    <section id="overnatting">
+      <h3>Overnatting</h3>
+      <h3>Overnatting kan søkes på trivago, airbnb, booking eller hotels. Visit
+        Danmark tilbyr 12 resultater: i tillegg til over- natting i telt kanman
+        leie en kran høyt oppi i luften..</h3>
+
       <Div>
       <div class="heroImgSwim">
         <img class="imgSwim" src="bilder/Swim.jpg" alt="strand" />
       </div>
       <div class="herotextSwim">
-       <p> Overnatting kan søkes på trivago, airbnb, booking eller hotels. Visit
-        Danmark tilbyr 12 resultater: i tillegg til over- natting i telt kanman
-        leie en kran høyt oppi i luften...</p>
+       <p> h.</p>
       </div>
     </Div>
       <div class="herotextPool"></div>
