--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
      
       <div class="herotextTransport">
         <img src="bilder/VDK-logo.svg" alt="logo Danmark">
-      <3>Du kan reise med tog,fly,båt eller bil til Danmark</3>
+      <h2>Du kan reise med tog,fly,båt eller bil til Danmark</h2>
 
-      <3> For eksempel med flyselskap Norvegian</3>
+      <h2> For eksempel med flyselskap Norvegian</h2>
       <a href="https://www.rejseplanen.dk/webapp/index.html?language=da_DA#!P|TP!histId|0!histKey|H171852"></a>
       </div>
       <div class="heroimgTransport">
