--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h2>Du kan reise med tog,fly,båt eller bil til Danmark</h2>
 
       <h2> For eksempel med flyselskap Norvegian</h2>
-      <a href="https://www.rejseplanen.dk/webapp/index.html?language=da_DA#!P|TP!histId|0!histKey|H171852"></a>
+      <p><a href="https://www.rejseplanen.dk/webapp/index.html?language=da_DA#!P|TP!histId|0!histKey|H171852">Reiseplannlegger</a></p>
       </div>
       <div class="heroimgTransport">
         <img class="imgtransport" src="bilder/buss.jpg" alt="flixbuss">
