--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <div class="heroDanmark">
         <div class="heroimgdanmark">
           <img src="bilder/VDK-logo.svg" alt="logo Danmark">
-          <h1>ønsker</h1>
+          
           <div class="heroimgdanmark">
-
+          <h2>Ønsker</h2>
             <img class="imgbarn" src="bilder/barn.jpg" alt="basrnebarn">
           </div>
           
