--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
     
    
     </section>
-    <h3>Overnatting</h3>
+  
   
     <section id="overnatting">
-      <h2>Overnatting</h2>
+    
       <Div>
       <div class="herotextSwim">
+        <h3>overnatting</h3>
         <h3>Overnatting kan søkes på trivago, airbnb, booking eller hotels. Visit
           Danmark tilbyr 12 resultater: i tillegg til over- natting i telt kanman
           leie en kran høyt oppi i luften..</h3>
