--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <h1>
       <img class="imgMedia" src="bilder/media.jpg" alt="facebook">
     </h1>
+    <h3>Laget av Marina</h3>
       </div>
       </div>
 
